# bibop-zephyr-eos-s3

./: .gitignore  README.md  compile_commands.json  shell.nix
app/: CMakeLists.txt  Kconfig  app.overlay  linear_bp_model_lighter.tflite  linear_bp_model_lighter_quant.tflite  prj.conf
app/src/: bibop_display.c  bibop_display.h  bibop_max30102.c  bibop_max30102.h  bp_processing.cpp  bp_processing.hpp  common.hpp  eoss3_dev.h  eoss3_hal_i2c.c  eoss3_hal_i2c.h  eoss3_hal_wb.c  eoss3_hal_wb.h  lis2dh.h  main.c  model.cpp  model.hpp  model_functions.cpp  model_functions.hpp  s3x_clock_hal.c  s3x_clock_hal.h
esp32_usb_uart/: README.md  esp32_usb_uart.ino
